fix: include AntennaPod version in full-logs export (#8739)